Upgrade the jvm to openjdk11 to match the supported environments